# RootRM

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs  migration.rs
payloads/reverse_quic/: Cargo.toml
payloads/reverse_shell/: Cargo.toml
payloads/reverse_shell/src/: main.rs
payloads/reverse_tcp/: Cargo.toml
payloads/reverse_tcp/src/: main.rs
rootrm/: Cargo.toml
rootrm/src/: lib.rs  main.rs  modules.rs
rootrm/src/commands/: misc.rs
rootrm/src/modules/: gui.rs  handlers.rs  misc.rs
src/: main.rs
win_kernel/: Cargo.toml
