[package]
name = "rootrm"
version = "0.1.0"
edition = "2021"
default-run = "rootrm"

# Binary that connects back to the server (default compiled binary)
[[bin]]
name = "implant"
test = false
bench = false

# If you just want to run the binary and directly call into it (not recommended but is an option)
[[bin]]
name = "independent"
test = false
bench = false

[dependencies]
thiserror = "1.0.47"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html