[package]
name = "rootrm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.4", features = ["derive"] }
eframe = {version = "0.23.0", optional = true}
egui = {version = "0.23.0", optional = true}
indicatif = "0.17.7"
inquire = "0.6.2"
lazy_static = "1.4.0"
parking_lot = { version = "0.12.1", features = ["deadlock_detection"] }
thiserror = "1.0.48"

[features]
default = []
gui = ["dep:eframe","dep:egui"]