[package]
name = "rootrm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.23.0", optional = true }
egui = { version = "0.23.0", optional = true }
indicatif = { version = "0.17.7", optional = true }
inquire = { version = "0.6.2", optional = true }
lazy_static = "1.4.0"
parking_lot = "0.12.1"
quinn = "0.10.2"
rustls = { version = "0.21.7", features = ["quic"] }
rustyline = "12.0.0"
thiserror = "1.0.48"
tokio = { version = "1.33.0", features = ["full"] }

[features]
default = ["debug"]
gui = ["dep:eframe", "dep:egui"]
debug = ["dep:inquire", "dep:indicatif"]
